--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,36 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="custom_blue">#3F7EB3</color>
+
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <color name="blue_100">#99D1FF</color>
+    <color name="blue_200">#7CC3FF</color>
+    <color name="blue_300">#63ABE6</color>
+    <color name="blue_400">#4A8CC4</color>
+    <color name="blue_500">#3470A2</color>
+    <color name="blue_600">#225580</color>
+    <color name="blue_700">#143C5E</color>
+
+    <!-- Warna Kuning -->
+    <color name="yellow_100">#FFF9E9</color>
+    <color name="yellow_200">#FFEDB9</color>
+    <color name="yellow_300">#FFE088</color>
+    <color name="yellow_400">#FFD358</color>
+    <color name="yellow_500">#FFC727</color>
+    <color name="yellow_600">#DDA915</color>
+    <color name="yellow_700">#997100</color>
+
+
+
+
+
+
+
 </resources>
