--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -30,7 +30,7 @@
         app:srcCompat="@drawable/search" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selamat Pagi,"
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.043" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView4"
         android:layout_width="377dp"
         android:layout_height="31dp"
         android:text="Layanan Akademik Yang Tersedia"
@@ -82,7 +82,7 @@
         app:layout_constraintHorizontal_bias="0.017"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.062"
+        app:layout_constraintVertical_bias="0.08"
         app:srcCompat="@drawable/img3" />
 
     <ImageView
@@ -111,7 +111,7 @@
         app:layout_constraintVertical_bias="0.689" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#3672A4"
@@ -124,7 +124,7 @@
         app:layout_constraintVertical_bias="0.532" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#3672A4"
@@ -141,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Kelola Kebutuhan Studimu secara Online"
-        android:textColor="#143D5F"
+        android:textColor="#7D8BB7"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +154,7 @@
         android:id="@+id/imageButton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
@@ -164,7 +164,7 @@
         app:srcCompat="@drawable/aktif" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
@@ -177,7 +177,7 @@
         app:srcCompat="@drawable/lulus" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/imageButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
