--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -84,7 +84,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.08"
-        app:srcCompat="@drawable/img3" />
+        app:srcCompat="@drawable/img_6" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -189,6 +189,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.994"
         app:srcCompat="@drawable/nilai" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
