--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -39,7 +39,7 @@
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Syifa Hadju"
+        android:text="Kaluna"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
@@ -87,6 +87,7 @@
         android:id="@+id/edtFeedback"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:background="@drawable/rounded_border"
         android:hint="Bagikan pendapat Anda..."
         android:gravity="top"
         android:padding="16dp"
