--- a/app/src/main/res/layout/activity_suratselesai.xml
+++ b/app/src/main/res/layout/activity_suratselesai.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView01"
         android:layout_width="464dp"
         android:layout_height="211dp"
-        android:layout_marginBottom="564dp"
+        android:layout_marginBottom="732dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -56,7 +56,7 @@
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.77"
+        app:layout_constraintVertical_bias="0.609"
         app:srcCompat="@drawable/suketselesai" />
 
     <ImageButton
@@ -69,7 +69,7 @@
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.315"
+        app:layout_constraintVertical_bias="0.241"
         app:srcCompat="@drawable/transkripselesai" />
 
     <ImageButton
@@ -82,7 +82,7 @@
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.568"
+        app:layout_constraintVertical_bias="0.449"
         app:srcCompat="@drawable/transkripselesai2" />
 
     <TextView
@@ -98,7 +98,7 @@
         app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.236" />
+        app:layout_constraintVertical_bias="0.182" />
 
     <TextView
         android:id="@+id/textView"
@@ -113,6 +113,57 @@
         app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.455" />
+        app:layout_constraintVertical_bias="0.37" />
+
+    <Button
+        android:id="@+id/buttonbuatlagi1"
+        android:layout_width="71dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#E5F6FF"
+        android:padding="12dp"
+        android:text="Buat Lagi"
+        android:textColor="#143C5E"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.254" />
+
+    <Button
+        android:id="@+id/buttonbuatlagi2"
+        android:layout_width="71dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#E5F6FF"
+        android:padding="12dp"
+        android:text="Buat Lagi"
+        android:textColor="#143C5E"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.453" />
+
+    <Button
+        android:id="@+id/buttonbuatlagi3"
+        android:layout_width="71dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#E5F6FF"
+        android:padding="12dp"
+        android:text="Buat Lagi"
+        android:textColor="#143C5E"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.595" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
