--- a/app/src/main/res/layout/activity_suratditolak.xml
+++ b/app/src/main/res/layout/activity_suratditolak.xml
@@ -35,7 +35,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Surat Selesai"
+        android:text="Surat Ditolak"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6 bulan yang lalu"
+        android:text="Terbaru"
         android:textColor="#143C5E"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -62,7 +62,7 @@
         app:layout_constraintVertical_bias="0.182" />
 
     <ImageView
-        android:id="@+id/ImageView01"
+        android:id="@+id/ImageButton01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#ffffff"
@@ -72,56 +72,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.241"
-        app:srcCompat="@drawable/transkripselesai" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1 tahun yang lalu"
-        android:textColor="#143C5E"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
-
-    <ImageView
-        android:id="@+id/ImageView02"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.449"
-        app:srcCompat="@drawable/transkripselesai2" />
-
-    <ImageView
-        android:id="@+id/ImageView03"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.609"
-        app:srcCompat="@drawable/suketselesai" />
+        app:srcCompat="@drawable/transkripditolak" />
 
     <Button
-        android:id="@+id/buttonbuatlagi1"
+        android:id="@+id/buttonlihatditolak"
         android:layout_width="71dp"
         android:layout_height="50dp"
         android:backgroundTint="#E5F6FF"
         android:padding="12dp"
-        android:text="Buat Lagi"
+        android:text="Lihat"
         android:textColor="#143C5E"
         android:textSize="10sp"
         android:textStyle="bold"
@@ -131,39 +90,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.254" />
-
-    <Button
-        android:id="@+id/buttonbuatlagi2"
-        android:layout_width="71dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#E5F6FF"
-        android:padding="12dp"
-        android:text="Buat Lagi"
-        android:textColor="#143C5E"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.453" />
-
-    <Button
-        android:id="@+id/buttonbuatlagi3"
-        android:layout_width="71dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#E5F6FF"
-        android:padding="12dp"
-        android:text="Buat Lagi"
-        android:textColor="#143C5E"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
