--- a/app/src/main/res/layout/activity_notifikasi.xml
+++ b/app/src/main/res/layout/activity_notifikasi.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Liatproses2Activity">
+    tools:context=".NotifikasiActivity">
 
     <ImageView
         android:id="@+id/imageView01"
