--- a/app/src/main/res/layout/activity_suratditolak.xml
+++ b/app/src/main/res/layout/activity_suratditolak.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Liatproses2Activity">
+    tools:context=".SuratDitolakActivity">
 
     <ImageView
         android:id="@+id/imageView01"
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Surat Ditolak"
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.056" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Terbaru"
