--- a/app/src/main/res/layout/activity_suratditolak.xml
+++ b/app/src/main/res/layout/activity_suratditolak.xml
@@ -8,10 +8,10 @@
     tools:context=".SuratDitolakActivity">
 
     <ImageView
-        android:id="@+id/imageView01"
+        android:id="@+id/imageView17"
         android:layout_width="464dp"
         android:layout_height="211dp"
-        android:layout_marginBottom="732dp"
+        android:layout_marginBottom="716dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -20,15 +20,15 @@
 
     <ImageButton
         android:id="@+id/imagebacksuratditolak"
-        android:layout_width="68dp"
-        android:layout_height="69dp"
+        android:layout_width="45dp"
+        android:layout_height="62dp"
         android:background="#4A8CC4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.017"
+        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037"
+        app:layout_constraintVertical_bias="0.041"
         app:srcCompat="@drawable/back" />
 
     <TextView
@@ -75,14 +75,14 @@
         app:srcCompat="@drawable/transkripditolak" />
 
     <Button
-        android:id="@+id/buttonlihatditolak"
+        android:id="@+id/Button_T1k"
         android:layout_width="71dp"
         android:layout_height="50dp"
         android:backgroundTint="#E5F6FF"
         android:padding="12dp"
         android:text="Lihat"
         android:textColor="#143C5E"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
