--- a/app/src/main/res/layout/activity_formuliraktif.xml
+++ b/app/src/main/res/layout/activity_formuliraktif.xml
@@ -23,10 +23,12 @@
         android:id="@+id/imageView28"
         android:layout_width="479dp"
         android:layout_height="735dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/frameformulir"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/frameformulir" />
 
     <TextView
         android:id="@+id/textView13"
