--- a/app/src/main/res/layout/activity_suratselesai.xml
+++ b/app/src/main/res/layout/activity_suratselesai.xml
@@ -8,10 +8,10 @@
     tools:context=".SuratSelesaiActivity">
 
     <ImageView
-        android:id="@+id/imageView01"
+        android:id="@+id/imageView17"
         android:layout_width="464dp"
         android:layout_height="211dp"
-        android:layout_marginBottom="732dp"
+        android:layout_marginBottom="716dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/img31" />
 
     <ImageButton
-        android:id="@+id/imagebacksuratselesai"
+        android:id="@+id/ImageB3"
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:background="#4A8CC4"
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/back" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Surat Selesai"
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.056" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="7 hari yang lalu"
@@ -75,7 +75,7 @@
         app:srcCompat="@drawable/transkripselesai1" />
 
     <Button
-        android:id="@+id/buttonbuatlagi1"
+        android:id="@+id/buttonB1"
         android:layout_width="71dp"
         android:layout_height="50dp"
         android:backgroundTint="#E5F6FF"
@@ -92,7 +92,7 @@
         app:layout_constraintVertical_bias="0.261" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textVi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="6 bulan yang lalu"
@@ -165,7 +165,7 @@
         app:srcCompat="@drawable/suketselesai" />
 
     <Button
-        android:id="@+id/buttonbuatlagi3"
+        android:id="@+id/buttonX1"
         android:layout_width="71dp"
         android:layout_height="50dp"
         android:backgroundTint="#E5F6FF"
