--- a/app/src/main/res/layout/activity_transkripnilai.xml
+++ b/app/src/main/res/layout/activity_transkripnilai.xml
@@ -19,11 +19,11 @@
 
     <ImageView
         android:id="@+id/imageView19"
-        android:layout_width="704dp"
-        android:layout_height="872dp"
-        android:layout_marginTop="152dp"
+        android:layout_width="446dp"
+        android:layout_height="888dp"
+        android:layout_marginTop="168dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/frameaktif" />
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.073" />
 
     <ImageButton
-        android:id="@+id/imagebacktranskrip"
+        android:id="@+id/ButtonImageB8"
         android:layout_width="42dp"
         android:layout_height="51dp"
         android:background="#4A8CC4"
@@ -68,7 +68,7 @@
         app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.075"
+        app:layout_constraintVertical_bias="0.064"
         app:srcCompat="@drawable/back" />
 
     <ImageView
@@ -87,14 +87,16 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="212dp"
         android:text="Deskripsi"
         android:textColor="#002649"
         android:textSize="25sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="197dp" />
-
+        app:layout_constraintHorizontal_bias="0.321"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.229" />
 
     <TextView
         android:id="@+id/textView6"
@@ -179,9 +181,12 @@
         android:id="@+id/imageView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/syarat"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="532dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673"
+        app:srcCompat="@drawable/syarat" />
 
     <TextView
         android:id="@+id/textView14"
