fix: layout liatproses2

--- a/app/src/main/res/layout/activity_formuliraktif.xml
+++ b/app/src/main/res/layout/activity_formuliraktif.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FormuliraktifActivity">
@@ -228,8 +230,8 @@
 
     <EditText
         android:id="@+id/editTextText4"
-        android:layout_width="372dp"
-        android:layout_height="37dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="#DEE1E7"
         android:hint="+62"
         android:padding="10dp"
