--- a/app/src/main/res/layout/activity_liatproses2.xml
+++ b/app/src/main/res/layout/activity_liatproses2.xml
@@ -23,6 +23,7 @@
         android:layout_width="68dp"
         android:layout_height="69dp"
         android:background="#4A8CC4"
+        android:contentDescription="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -50,6 +51,7 @@
         android:id="@+id/ImageButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="card"
         android:background="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
