fix: login2 layout

--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.306" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/password"
         android:layout_width="354dp"
         android:layout_height="52dp"
         android:backgroundTint="#BDBDBD"
