--- a/app/src/main/res/layout/activity_suratlulus.xml
+++ b/app/src/main/res/layout/activity_suratlulus.xml
@@ -46,9 +46,11 @@
 
     <ImageButton
         android:id="@+id/imageback"
-        android:layout_width="42dp"
-        android:layout_height="51dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
         android:background="#4A8CC4"
+        android:contentDescription="button back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
@@ -97,13 +99,15 @@
         app:layout_constraintVertical_bias="0.265" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewdeskripsi"
         android:layout_width="178dp"
-        android:layout_height="118dp"
+        android:layout_height="wrap_content"
         android:justificationMode="inter_word"
         android:text="Surat Keterangan Lulus merupakan dokumen yang diterbitkan dengan tujuan untuk menerangkan jika mahasiswa yang bersangkutan sudah menyelesaikan masa studinya di sekolah atau perguruan tinggi."
         android:textColor="#7D8BB7"
-        android:textSize="10dp"
+        android:textSize="10sp"
+        android:lineSpacingExtra="2dp"
+        android:contentDescription="Deskripsi Surat Keterangan Lulus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.145"
@@ -111,10 +115,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.337" />
 
+
     <Button
         android:id="@+id/button"
-        android:layout_width="143dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
         android:backgroundTint="#FFC727"
         android:text="Ajukan"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,6 +138,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.564"
         app:srcCompat="@drawable/syarat" />
 
     <TextView
@@ -147,7 +154,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        app:layout_constraintVertical_bias="0.519" />
 
     <TextView
         android:id="@+id/textView7"
@@ -161,7 +168,7 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.511" />
+        app:layout_constraintVertical_bias="0.569" />
 
     <ImageView
         android:id="@+id/imageView20"
@@ -171,7 +178,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView18"
-        app:layout_constraintVertical_bias="0.688"
+        app:layout_constraintVertical_bias="0.825"
         app:srcCompat="@drawable/syarat" />
 
     <TextView
@@ -184,9 +191,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.626" />
+        app:layout_constraintVertical_bias="0.684" />
 
     <TextView
         android:id="@+id/textView11"
@@ -200,7 +208,7 @@
         app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.679" />
+        app:layout_constraintVertical_bias="0.768" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
